# geospatial-pipelines

./: .env.example  .gitignore  .gitmodules  Dockerfile.bacalhau  LICENSE  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  pyproject.toml  run_bacalhau.sh  tsconfig.base.json
.aws/: credentials.example
.github/Workflows/: build.yml  build_pypi.yml
aws_deployment/: Dockerfile  README.md
aws_deployment/aws_deployment/: aws_deployment_stack.py
e2e/: Dockerfile  __init__.py  georender_test.py  pyproject.toml  requirements.txt  surface_reconstruction_test.py
