[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "e2e-pipeline-testing"
authors = [
    {name = "Dhruv Malik", email = "malikdhruv1994@gmail.com"},
]
description = "A testing package for e2e-pointcloud pipeline testing"

requires-python = ">=3.10"
keywords = ["web3", "geosptial-data-analysis"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]